Fix broken layout on project blog posts
Fixes T52764

--- a/src/styles/_project.sass
+++ b/src/styles/_project.sass
@@ -6,6 +6,9 @@ body.workshops
 	#project-container
 		+container-behavior
 
+body.blog
+	background-color: white
+
 #project-container
 	display: flex
 	flex-direction: row
@@ -2663,7 +2666,7 @@ section.node-children
 			width: 100%
 			padding: 0
 			border: none
-			border-radius: 0
+			box-shadow: none
 
 			.blog_index-header
 				border-radius: 0
